# dutopia

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  cert.pem  machine.raw  plan.md  vendor.sh
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
browser/: CLAUDE.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
browser/public/: index.html
browser/public/_app/: version.json
browser/public/_app/immutable/assets/: 0.BMbqPm-6.css  0.BbdrM_c-.css  0.BbhHEuWD.css  0.Bp6OlYl4.css  0.BqtGU-pl.css  0.CQLq_w9X.css  2.Bu9-8PgN.css  2.CMDNzDLe.css  2.DA0qXrja.css  2.DHEM1kWE.css
browser/public/_app/immutable/chunks/: 1HVh5pe6.js.map  2K8Pn13Q.js.map  5f38LTFQ.js  5f38LTFQ.js.map  6mf93h4x.js  6mf93h4x.js.map  B3koRlLv.js  B3koRlLv.js.map  B5EFXOgo.js  B5EFXOgo.js.map  B5k-dXXb.js  B5k-dXXb.js.map  B6xPqcHX.js  B6xPqcHX.js.map  B7sCfY6m.js  B7sCfY6m.js.map  B8Q-IoGd.js  B8Q-IoGd.js.map  (+82 more)
browser/src/: app.css  app.d.ts  app.html
browser/src/lib/: ActionBar.svelte  AgeFilter.svelte  CleanupPanel.svelte  ConfirmDialog.svelte  CopyToast.svelte  DeletePanel.svelte  FileBar.svelte  FolderBar.svelte  Login.svelte  PageContent.svelte  PageNav.svelte  PathStats.svelte  PickerButton.svelte  PickerIndicator.svelte  PickerWrapper.svelte  ScanPanel.svelte  SortDropdown.svelte  StatusBar.svelte  Tooltip.svelte  TreeMap.svelte
browser/src/routes/: +layout.svelte  +page.svelte
browser/src/ts/: api.svelte.ts  api.tauri.svelte.ts  api.web.svelte.ts  cache.ts  cleanupQueue.svelte.ts  deleteQueue.svelte.ts  models.ts  scan.svelte.ts  store.svelte.ts  tooltip.ts  transform.test.ts  transform.ts  util.test.ts  util.ts
cloud/: data.db
desktop/: package-lock.json  package.json  svelte.config.js  vite.config.js
desktop/scripts/: bundle-bin.mjs
desktop/src/: app.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  state.rs
desktop/src-tauri/src/cmd/: drive.rs  fsop.rs  mod.rs  query.rs  scan.rs
doc/: api.md  architecture.md  build_deck.py  deltas.md  deploy.md  dutopia-handbook.pptx  guide.md  handbook.md  mcp.md
docs/superpowers/plans/: 2026-04-16-duapi-high-fixes.md
python/: requirements.txt
rs/: CLAUDE.md  Cargo.toml  key.pem  machine.csv  machine.raw.csv
rs/src/: analytic.rs  auth.rs  db.rs  item.rs  lib.rs  util.rs
rs/src/util/: csv.rs  format.rs  logging.rs  mod.rs  path.rs  row.rs
script/: cert.sh  git.py
src/: auth.rs  db.rs  item.rs  lib.rs  query.rs  storage.rs
src/util/: mod.rs  platform.rs
(+108 files in other folders)
