[package]
name = "dutopia"
version = "4.0.13"
authors = ["SAG <sganis@gmail.com>"]
edition = "2024"

[dependencies]
itoa = "1"
atoi = "2"
csv = "1.3"
anyhow = "1"
num_cpus = "1.17"
memchr = "2.7"
colored = "3.0.0"
tempfile = "3.22.0"
dotenvy = "0.15.7"
clap = { version = "4.5", features = ["derive", "env", "color"] }
crossbeam = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "json", ] } 
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["cors", "fs", "limit", "timeout"] }
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
serial_test = "3"
serde_json = "1"
zstd = "0.13.3"
hostname = "0.4"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"


[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", features = ["Win32_Foundation","Win32_Security","Win32_Security_Authorization"] }

[build-dependencies]
chrono = "0.4"

# [target.'cfg(target_os = "macos")'.dependencies]


# Enable ANSI for Windows consoles
# [target.'cfg(windows)'.dependencies]
# anstyle-wincon = "3"

# [profile.release]
# lto = "thin"
# codegen-units = 1
# panic = "abort"

