[package]
name = "desktop"
version = "0.1.0"
description = "Dutopia desktop"
authors = ["SAG <sganis@gmail.com>"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
trash = "5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# Dutopia library: storage enumeration + SQLite query helpers + filesystem item listing.
dutopia = { path = "../../rs" }
